--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,5 @@
-baseURL = "http://example.org/"
+baseURL = "/"
+themesDir = "themes"
+theme = "hugo-hero-theme"
 languageCode = "en-us"
 title = "My New Hugo Site"
